# struct_param

./: .gitignore  Cargo.toml
src/: lib.rs
