[package]
name = "struct_param"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.105", features = ["extra-traits"] }
field_types = "1.1.0"
optional_struct = "0.2.0"
proc-macro2 = "1.0.47"
quote = "1.0.21"
serde = "1.0.148"
convert_case = "0.6.0"

[lib]
proc-macro = true
